updated projects pages & tools/resources page

--- a/projects.html
+++ b/projects.html
@@ -76,50 +76,75 @@
           </div>
         </div>
       </div>
-        <div class="header">
-          <h4>Current Projects</h4>
-        </div>
+      <br><br><br> 
+      <a href="#bots" class="btn5 btn-outline-dark"><i style="color: rgb(83, 83, 168);"  class="fas fa-robot"></i>&nbsp;Discord Bots</a>
+      <a href="#other" class="btn5 btn-outline-dark"><i style="color: #8e9629;" class="fas fa-code-branch"></i>&nbsp;Other Projects</a>
 
+      <div id="bots"></div>
+        <div class="header">
+          <h4>Discord Bots</h4>
+        </div>
         <div class="ourProjects">
            <!-- TODO Mythbot Radio -->
-          <div class="card text-white bg-dark" ">
-             <div class="card-header" style="background-color: #1a2535;">
-              Mythbot Radio
-                </div>
-                <div class="card-body" style="background-color: #0e141d;"><br>
-                <center><img class="staffImg" draggable="false" src="../assets/img/projects/mbr-logo.png" > </img></center><br>
-                <center><p class="card-text" >&nbsp;<span>Join 1.5m Users, User 💎MythBot Radio™, With over 30+ Radio Stations From All Over The World</span></p></center><br>
-                <a href="https://www.mythbot.org" class="btn btn-outline-dark"><i class="fas fa-house-user" style="color: #6b3434;"></i>&nbsp;</a>
-                <a href="https://www.mythbot.org/mbr" class="btn btn-outline-dark"><i style="color: #fafafa;" class="bi bi-plus-square"></i>&nbsp;</a>
-                <a href="https://www.mythbot.org/discord" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;</a>
-              </div>
-            </div>
-
-            <!-- TODO DscBots -->
-          <div class="card text-white bg-dark" ">
-             <div class="card-header" style="background-color: #1a2535;">
-               DscBots
-                </div>
-                <div class="card-body" style="background-color: #0e141d;"><br>
-                <center><img class="staffImg" draggable="false" src="../assets/img/projects/dscbots2.gif" style="border-radius: 50%;"> </img></center><br>
-                <center><p class="card-text">&nbsp;<span>join or Grow your community with DscBots, From Discord bots to Discord servers and more!</span></p></center><br>
-                <a href="https://www.dscbots.xyz" class="btn btn-outline-dark"><i class="fas fa-house-user" style="color: #6b3434;"></i>&nbsp;</a>
-                <a href="https://dscbots.xyz/bot-rules" class="btn btn-outline-dark"><i style="color: #fafafa;" class="bi bi-plus-square"></i>&nbsp;</a>
-                <a href="https://www.dscbots.xyz/discord" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;</a>
-              </div>
-            </div>
+          
             <div class="card text-white bg-dark" ">
               <div class="card-header" style="background-color: #1a2535;">
-                Upcoming Project
+               Mythbot Radio
                  </div>
                  <div class="card-body" style="background-color: #0e141d;"><br>
-                 <center><img class="staffImg" draggable="false" src="../assets/img/vlogot.png" style="border-radius: 50%;"> </img></center><br>
-                 <center><p class="card-text" >&nbsp;Join our <a href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Discord</a> For more upcoming information about our new and upcoming projects</p></center><br>
-                 <a href="https://www.mythbot.org/discord" class="btn btn-outline-dark"><i class="fas fa-house-user" style="color: #6b3434;"></i>&nbsp;</a>
-                 <a href="https://www.mythbot.org/discord" class="btn btn-outline-dark"><i style="color: #fafafa;" class="bi bi-plus-square"></i>&nbsp;</a>
+                 <center><img class="staffImg" draggable="false" src="../assets/img/projects/mbr-logo.png" > </img></center><br>
+                 <center><p class="card-text" >&nbsp;<span>Join 1.5m Users, User 💎MythBot Radio™, With over 30+ Radio Stations From All Over The World</span></p></center><br>
+                 <a href="https://www.mythbot.org" class="btn btn-outline-dark"><i class="fas fa-house-user" style="color: #6b3434;"></i>&nbsp;</a>
+                 <a href="https://www.mythbot.org/mbr" class="btn btn-outline-dark"><i style="color: #fafafa;" class="bi bi-plus-square"></i>&nbsp;</a>
                  <a href="https://www.mythbot.org/discord" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;</a>
                </div>
+             </div>       
+           <!-- TODO Mythbot Radio -->
+           <div class="card text-white bg-dark" ">
+            <div class="card-header" style="background-color: #1a2535;">
+              Upcoming Discord Bot
+               </div>
+               <div class="card-body" style="background-color: #0e141d;"><br>
+               <center><img class="staffImg" draggable="false" src="../assets/img/vlogot.png" style="border-radius: 50%;"> </img></center><br>
+               <center><p class="card-text" >&nbsp;Join our <a href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Discord</a> For more upcoming information about our new and upcoming projects</p></center><br>
+               <a href="https://www.mythbot.org/discord" class="btn btn-outline-dark"><i class="fas fa-house-user" style="color: #6b3434;"></i>&nbsp;</a>
+               <a href="https://www.mythbot.org/discord" class="btn btn-outline-dark"><i style="color: #fafafa;" class="bi bi-plus-square"></i>&nbsp;</a>
+               <a href="https://www.mythbot.org/discord" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;</a>
              </div>
+           </div>      
+        </div><br><br>
+
+
+<div id="other"></div>
+<div class="header">
+  <h4>Other Projects</h4>
+</div>    
+  <div class="ourProjects">
+  <!-- TODO DscBots -->
+  <div class="card text-white bg-dark" ">
+    <div class="card-header" style="background-color: #1a2535;">
+      DscBots
+       </div>
+       <div class="card-body" style="background-color: #0e141d;"><br>
+       <center><img class="staffImg" draggable="false" src="../assets/img/projects/dscbots2.gif" style="border-radius: 50%;"> </img></center><br>
+       <center><p class="card-text">&nbsp;<span>join or Grow your community with DscBots, From Discord bots to Discord servers and more!</span></p></center><br>
+       <a href="https://www.dscbots.xyz" class="btn btn-outline-dark"><i class="fas fa-house-user" style="color: #6b3434;"></i>&nbsp;</a>
+       <a href="https://dscbots.xyz/bot-rules" class="btn btn-outline-dark"><i style="color: #fafafa;" class="bi bi-plus-square"></i>&nbsp;</a>
+       <a href="https://www.dscbots.xyz/discord" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;</a>
+     </div>
+   </div>
+   <div class="card text-white bg-dark" ">
+     <div class="card-header" style="background-color: #1a2535;">
+       Upcoming Project
+        </div>
+        <div class="card-body" style="background-color: #0e141d;"><br>
+        <center><img class="staffImg" draggable="false" src="../assets/img/vlogot.png" style="border-radius: 50%;"> </img></center><br>
+        <center><p class="card-text" >&nbsp;Join our <a href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Discord</a> For more upcoming information about our new and upcoming projects</p></center><br>
+        <a href="https://www.mythbot.org/discord" class="btn btn-outline-dark"><i class="fas fa-house-user" style="color: #6b3434;"></i>&nbsp;</a>
+        <a href="https://www.mythbot.org/discord" class="btn btn-outline-dark"><i style="color: #fafafa;" class="bi bi-plus-square"></i>&nbsp;</a>
+        <a href="https://www.mythbot.org/discord" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;</a>
+      </div>
+    </div>
         </div>
         
   </div><br><br><br><br><br><br>
