--- a/tools.html
+++ b/tools.html
@@ -75,11 +75,10 @@
             <br>Let us know in our&nbsp;<a href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Discord</a>.
           </div>
         </div>
-      </div><br><br><br>  
-        
+      </div>
+      <br><br><br> 
       <a href="#tools" class="btn5 btn-outline-dark"><i style="color: green;"  class="fas fa-tools"></i>&nbsp;Tools</a>
       <a href="#resources" class="btn5 btn-outline-dark"><i style="color: orangered;" class="fas fa-code-branch"></i>&nbsp;Resources</a>
-        
       <div class="header">
         <h4>Tools</h4>
       </div><br>
@@ -137,6 +136,8 @@
 </div>
         <br><br><br><br><br><br>
   </div>
+  </div>
+
   <br><br><br><br><br><br>
   <div class="d-flex flex-wrap justify-content-between align-items-center " style="background-color: #0e141d; padding-top: .5rem;align-items: center; " >
     <div class="col-md-4 d-flex align-items-center">
