added placement holders

--- a/projects.html
+++ b/projects.html
@@ -112,6 +112,19 @@
                <a href="https://www.mythbot.org/discord" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;</a>
              </div>
            </div>      
+           <!-- TODO Mythbot Radio -->
+           <div class="card text-white bg-dark" ">
+            <div class="card-header" style="background-color: #1a2535;">
+              Upcoming Discord Bot
+               </div>
+               <div class="card-body" style="background-color: #0e141d;"><br>
+               <center><img class="staffImg" draggable="false" src="../assets/img/vlogot.png" style="border-radius: 50%;"> </img></center><br>
+               <center><p class="card-text" >&nbsp;Join our <a href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Discord</a> For more upcoming information about our new and upcoming projects</p></center><br>
+               <a href="https://www.mythbot.org/discord" class="btn btn-outline-dark"><i class="fas fa-house-user" style="color: #6b3434;"></i>&nbsp;</a>
+               <a href="https://www.mythbot.org/discord" class="btn btn-outline-dark"><i style="color: #fafafa;" class="bi bi-plus-square"></i>&nbsp;</a>
+               <a href="https://www.mythbot.org/discord" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;</a>
+             </div>
+           </div>      
         </div><br><br>
 
 
@@ -133,6 +146,18 @@
        <a href="https://www.dscbots.xyz/discord" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;</a>
      </div>
    </div>
+   <div class="card text-white bg-dark" ">
+     <div class="card-header" style="background-color: #1a2535;">
+       Upcoming Project
+        </div>
+        <div class="card-body" style="background-color: #0e141d;"><br>
+        <center><img class="staffImg" draggable="false" src="../assets/img/vlogot.png" style="border-radius: 50%;"> </img></center><br>
+        <center><p class="card-text" >&nbsp;Join our <a href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Discord</a> For more upcoming information about our new and upcoming projects</p></center><br>
+        <a href="https://www.mythbot.org/discord" class="btn btn-outline-dark"><i class="fas fa-house-user" style="color: #6b3434;"></i>&nbsp;</a>
+        <a href="https://www.mythbot.org/discord" class="btn btn-outline-dark"><i style="color: #fafafa;" class="bi bi-plus-square"></i>&nbsp;</a>
+        <a href="https://www.mythbot.org/discord" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;</a>
+      </div>
+    </div>
    <div class="card text-white bg-dark" ">
      <div class="card-header" style="background-color: #1a2535;">
        Upcoming Project
