--- a/tools.html
+++ b/tools.html
@@ -89,7 +89,7 @@
 
         
         <div class="card1 row g-0 position-relative" >
-          <div class="col-md-6 mb-md-0 p-md-5">
+          <div class="col-md-6 mb-md-0 p-md-4">
             <img src="./assets/img/tools/discord.png" class="w-100" alt="...">
           </div>
           <div class="col-md-6 p-4 ps-md-0 text-light mt-3">
@@ -110,7 +110,7 @@
             Join our <a class="discord_id" draggable="false" href="https://mythbot.org/discord" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" ><i class="bi bi-discord" style="color: #7289DA;"></i>Discord</a><br><br>
             <a href="https://zap-hosting.com/vdevs" class="btn btn-outline-dark" style="text-decoration: none;font-size: 1.3vh;width: 5rem;"><i style="color: #8e9629;" class="fas fa-house-user"></i>&nbsp;Home</a>
           </div>
-          <div class="col-md-6 mb-md-0 p-md-5">
+          <div class="col-md-6 mb-md-0 p-md-4">
             <img src="./assets/img/tools/zap_big.png" class="w-100" alt="...">
           </div>
         </div>
@@ -122,7 +122,7 @@
       </div><br>
       <!--! Discord Branding -->
       <div class="card1 row g-0 position-relative" >
-        <div class="col-md-6 mb-md-0 p-md-5">
+        <div class="col-md-6 mb-md-0 p-md-4">
           <img src="./assets/img/tools/discord_branding.png" class="w-100" alt="...">
         </div>
         <div class="col-md-6 p-4 ps-md-0 text-light mt-3">
@@ -132,7 +132,20 @@
           Join our <a class="discord_id" draggable="false" href="https://mythbot.org/discord" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" ><i class="bi bi-discord" style="color: #7289DA;"></i>Discord</a><br><br>
           <a href="https://discord.com/branding" class="btn btn-outline-dark" style="text-decoration: none;font-size: 1.3vh;width: 5rem;"><i style="color: #8e9629;" class="fas fa-house-user"></i>&nbsp;Home</a>
         </div>
-      </div>
+      </div><br>
+     <!--! Font Awesome -->
+        <div class="card1 row g-0 position-relative" >
+          <div class="col-md-6 p-4 ps-md-3 text-light mt-2">
+            <h5 class="mt-5">Font Awesome</h5>
+            <p>Font Awesome Free is free, open source, and GPL friendly. You can use it for commercial projects, open source projects, or really almost whatever you want. 
+              <br><code>Font Awesome is trusted by Millions's of users</code></p>
+            Join our <a class="discord_id" draggable="false" href="https://mythbot.org/discord" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" ><i class="bi bi-discord" style="color: #7289DA;"></i>Discord</a><br><br>
+            <a href="https://fontawesome.com" class="btn btn-outline-dark" style="text-decoration: none;font-size: 1.3vh;width: 5rem;"><i style="color: #8e9629;" class="fas fa-house-user"></i>&nbsp;Home</a>
+          </div>
+          <div class="col-md-6 mb-md-0 p-md-4">
+            <img src="./assets/img/tools/awesome_fonts.png" class="w-100" alt="...">
+          </div>
+        </div>
 </div>
         <br><br><br><br><br><br>
   </div>
