added more tools to the tools sections

--- a/tools.html
+++ b/tools.html
@@ -113,7 +113,19 @@
           <div class="col-md-6 mb-md-0 p-md-4">
             <img src="./assets/img/tools/zap_big.png" class="w-100" alt="...">
           </div>
-        </div>
+        </div><br>
+        <div class="card1 row g-0 position-relative" >
+          <div class="col-md-6 mb-md-0 p-md-4">
+            <img src="./assets/img/tools/vcodes.png" class="w-100" alt="...">
+          </div>
+          <div class="col-md-6 p-4 ps-md-0 text-light mt-3">
+            <h5 class="mt-5">Visual Studio Code</h5>
+            <p>Visual Studio Code is a code editor redefined and optimized for building and debugging modern web and cloud applications 
+              <br><code>Visual Studio Code is recommended by millions of developers</code></p>
+            Join our <a class="discord_id" draggable="false" href="https://mythbot.org/discord" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" ><i class="bi bi-discord" style="color: #7289DA;"></i>Discord</a><br><br>
+            <a href="https://code.visualstudio.com" class="btn btn-outline-dark " style="text-decoration: none;font-size: 1.3vh;width: 5rem;"><i style="color: #8e9629;" class="fas fa-house-user"></i>&nbsp;Home</a>
+          </div>
+        </div><br>
           
       </div><br>
       <div id="resources">
