added back to top button on pages

--- a/index.html
+++ b/index.html
@@ -131,7 +131,9 @@
               </div>
             </div>
         </div>
-  </div><br><br><br><br><br><br>
+  </div>
+  <br><br><br><br><br><br>
+  <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
   </div>
   <div class="d-flex flex-wrap justify-content-between align-items-center " style="background-color: #0e141d; padding-top: .5rem;align-items: center; " >
     <div class="col-md-4 d-flex align-items-center">
