--- a/projects.html
+++ b/projects.html
@@ -171,8 +171,9 @@
       </div>
     </div>
         </div>
-        
-  </div><br><br><br><br><br><br>
+        <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
+  </div>
+  <br><br><br><br><br><br>
   <div class="d-flex flex-wrap justify-content-between align-items-center " style="background-color: #0e141d; padding-top: .5rem;align-items: center; " >
     <div class="col-md-4 d-flex align-items-center">
       <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
