--- a/tools.html
+++ b/tools.html
@@ -173,6 +173,7 @@
 </div>
         <br><br><br><br><br><br>
   </div>
+  <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
   </div>
 
   <br><br><br><br><br><br>
