Ooo added new Discord Widget 🔥

--- a/index.html
+++ b/index.html
@@ -131,6 +131,12 @@
               </div>
             </div>
         </div>
+        <div class="header"style="text-decoration: none;">
+          <h4>Join our <a href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #7289DA; font-weight: bolder;text" >Discord</a> </h4>
+        </div>
+        <div class="discordWidget">
+          <iframe src="https://dev.diswidgets.org/widgets/nyX9FL7SImD6tE4pWe" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+        </div>
   </div>
   <br><br><br><br><br><br>
   <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
