--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta data-react-helmet="true" name="twitter:creator" content="@jokerxtd"/>
     <meta data-react-helmet="true" name="twitter:title" content="Voltic Development | Home" />
     <meta data-react-helmet="true" name="twitter:description" content="A place you can call home. Need help with what you are working on? Come join us and ask the community, We all have the same goal & that is."/>
-    <meta data-react-helmet="true" name="twitter:thumbnail" content="http://cdn.mythbot.org/img/M2OYF.png"/>
+    <meta name="og:image" content="<%= image && image !== 'none' ? image : 'https://cdn.mythbot.org/img/dev_NFiT5.png' %>" />
     <meta data-n-head="ssr" data-hid="theme-color" name="theme-color" name="theme-color"content="#0A0F16;"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
