updated team. added new staff💖

--- a/index.html
+++ b/index.html
@@ -92,45 +92,64 @@
                 <center><img class="staffImg" id="joker_avatar" src="https://cdn.discordapp.com/avatars/116730818822537225/a_8e5fad610c822f5ecb4721066bb9ab97.gif"></img></center><br><br><br>
                 <h5><a  style="text-decoration: none; color: #7289DA; font-weight: bolder;" >CEO / Lead Developer</a> </h5>
                 <p class="card-text" href="https://discord.com/users/116730818822537225" style="color: #fafafa;">I am always looking to learn new things! It is all about the&nbsp;<a href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Experience</a></p><br>
-                <a href="https://joker.is-a.dev" class="btn btn-outline-dark"><i class="fas fa-portrait" style="color: #6b3434;"></i>&nbsp;</a>
+                <a href="https://joker.is-a.dev" class="btn btn-outline-dark"><i class="fas fa-home" style="color: #6b3434;"></i>&nbsp;</a>
                 <a href="https://github.com/jokerxtd" class="btn btn-outline-dark"><i style="color: #fafafa;" class="bi bi-github"></i>&nbsp;</a>
                 <a href="https://www.mythbot.org/discord" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;</a>
                 <a href="https://twitter.com/JoKeRxHD" class="btn btn-outline-dark"><i style="color: #1DA1F2;" class="bi bi-twitter"></i>&nbsp;</a>
                 <a href="https://api.mythbot.org" class="btn btn-outline-dark"><i style="color: #6b3434;" class="fas fa-eye"></i>&nbsp;</a><br>
               </div>
             </div>
-          <!--! Vacant -->
+          <!--! ZeroTwo#9568 -->
           <div class="card text-white bg-dark" >
              <div class="card-header" style="background-color: #1a2535;">
-                <i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;Vacant</div>
+                <i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;ZeroTwo#9568</div>
                 <div class="card-body" style="background-color: #0e141d;"><br>
-                <center><img class="staffImg" src="./assets/img/voltic-pholder.png" > </img></center><br>
-                <h5><a  style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Sr.Developer</a></h5>
-                <center><p class="card-text" href="/" style="padding-bottom: 1rem;">&nbsp;We are looking for Staff, Join our <a href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Discord</a> For more information</p></center><br>
-                <a href="/" class="btn btn-outline-dark"><i class="fas fa-portrait" style="color: #6b3434;"></i>&nbsp;</a>
-                <a href="/" class="btn btn-outline-dark"><i style="color: #fafafa;" class="bi bi-github"></i>&nbsp;</a>
-                <a href="/" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;</a>
-                <a href="/" class="btn btn-outline-dark"><i style="color: #1DA1F2;" class="bi bi-twitter"></i>&nbsp;</a>
-                <a href="/" class="btn btn-outline-dark"><i style="color: #6b3434;" class="fas fa-eye"></i>&nbsp;</a>
+                <center><img class="staffImg" src="https://cdn.mythbot.org/img/dev_sz1knkm7.png" > </img></center><br>
+                <h5><a  style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Developer</a></h5>
+                <p class="card-text" href="https://discord.com/users/899722893603274793" style="color: #fafafa;">Oh no, Looks like I accidentally became a&nbsp;<a style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Developer</a></p><br>
+                <a href="https://zerotwo.zerotwo36.repl.co/" class="btn btn-outline-dark"><i class="fas fa-home" style="color: #6b3434;"></i>&nbsp;</a>
+                <a href="https://github.com/ZeroTwo36" class="btn btn-outline-dark"><i style="color: #fafafa;" class="bi bi-github"></i>&nbsp;</a>
+                <a href="https://discord.gg/RVppWSxK3P" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;</a>
+                <a href="https://www.instagram.com/ZeroTwo.36" class="btn btn-outline-dark"><i style="color: #bc2a8d;" class="bi bi-instagram"></i>&nbsp;</a>
+                <a href="mailto:ZeroTwo36@protonmail.com" class="btn btn-outline-dark"><i style="color: #6b3434;" class="fas fa-at"></i>&nbsp;</a>
               </div>
             </div>
-            <!--! Vacant -->
+            <!--! DS_Stift007#4606 -->
           <div class="card text-white bg-dark">
              <div class="card-header" style="background-color: #1a2535;">
-                <i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;Vacant
+                <i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;DS_Stift007#4606
                 </div>
                 <div class="card-body" style="background-color: #0e141d;"><br>
-                <center><img class="staffImg" src="./assets/img/voltic-pholder.png" > </img></center><br>
-                <h5><a  style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Sr.Administrator</a></h5>
-                <center><p class="card-text" href="/" style="padding-bottom: 1rem;">&nbsp;We are looking for Staff, Join our <a href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Discord</a> For more information</p></center><br>
-                <a href="/" class="btn btn-outline-dark"><i class="fas fa-portrait" style="color: #6b3434;"></i>&nbsp;</a>
-                <a href="/" class="btn btn-outline-dark"><i style="color: #fafafa;" class="bi bi-github"></i>&nbsp;</a>
-                <a href="/" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;</a>
-                <a href="/" class="btn btn-outline-dark"><i style="color: #1DA1F2;" class="bi bi-twitter"></i>&nbsp;</a>
-                <a href="/" class="btn btn-outline-dark"><i style="color: #6b3434;" class="fas fa-eye"></i>&nbsp;</a>
+                <center><img class="staffImg" src="https://cdn.mythbot.org/img/dev_h050nej1.png" > </img></center><br>
+                <h5><a  style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Developer</a></h5>
+                <p class="card-text" href="https://discord.com/users/685180177419993102" style="color: #fafafa;">Founder and Developer of&nbsp;<a style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Midna</a>&nbsp;&&nbsp;<a style="text-decoration: none; color: #7289DA; font-weight: bolder;" >OctoCat</a></p><br><br>
+                <a href="https://stift007.glitch.me/" class="btn btn-outline-dark"><i class="fas fa-home" style="color: #6b3434;"></i>&nbsp;</a>
+                <a href="https://github.com/Stift007" class="btn btn-outline-dark"><i style="color: #fafafa;" class="bi bi-github"></i>&nbsp;</a>
+                <a href="https://replit.com/Stift007" class="btn btn-outline-dark"><i style="color: #fafafa;"  class="fab fa-replyd"></i>&nbsp;</a>
+                <a href="https://twitter.com/Clyde__Chan" class="btn btn-outline-dark"><i style="color: #1DA1F2;" class="bi bi-twitter"></i>&nbsp;</a>
+                <a href="https://9gag.com/u/dsstift" class="btn btn-outline-dark"><i style="color: #6b3434;" class="fas fa-eye"></i>&nbsp;</a>
               </div>
             </div>
-        </div>
+        
+        </div><br><br>
+          <center>
+             <!--! Saria#2561 -->
+           <div class="card text-white bg-dark">
+            <div class="card-header" style="background-color: #1a2535;">
+               <i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;Saria#2561
+               </div>
+               <div class="card-body" style="background-color: #0e141d;"><br>
+               <center><img class="staffImg" src="https://cdn.mythbot.org/img/dev_xf0ts9i0.png" > </img></center><br>
+               <h5><a  style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Moderator</a></h5>
+               <p class="card-text" href="https://discord.com/users/685180177419993102" style="color: #fafafa;">Moderator and Developer for&nbsp;<a  style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Discord Bots</a>&nbsp;and&nbsp;<a  style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Servers</a></p><br>
+               <a href="https://replit.com/Just__Saria" class="btn btn-outline-dark"><i class="fas fa-home" style="color: #6b3434;"></i>&nbsp;</a>
+               <!-- <a href="/" class="btn btn-outline-dark"><i style="color: #fafafa;" class="bi bi-github"></i>&nbsp;</a> -->
+               <a href="https://discord.gg/dap8QWMuGG" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;</a>
+               <a href="Saria" class="btn btn-outline-dark"><i style="color: #FF0000;" class="bi bi-youtube"></i>&nbsp;</a>
+               <!-- <a href="/" class="btn btn-outline-dark"><i style="color: #6b3434;" class="fas fa-eye"></i>&nbsp;</a> -->
+             </div>
+           </div>
+          </center>
         <div class="header"style="text-decoration: none;">
           <h4>Join our <a href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #7289DA; font-weight: bolder;text" >Discord</a> </h4>
         </div>
