--- a/index.html
+++ b/index.html
@@ -18,13 +18,12 @@
     <meta data-react-helmet="true" name="twitter:title" content="Voltic Development | Home" />
     <meta data-react-helmet="true" name="twitter:description" content="A place you can call home. Need help with what you are working on? Come join us and ask the community, We all have the same goal & that is."/>
     <meta name="og:image" content="https://cdn.mythbot.org/img/dev_2syv5i6a.png" />
-    <meta data-n-head="ssr" data-hid="theme-color" name="theme-color" name="theme-color"content="#0A0F16;"/>
+    <meta name="theme-color" content="#36393E">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <title>Voltic Development | Home</title> 
     <link rel="apple-touch-icon" href="./assets/img/vlogo.png">
-    <link rel="manifest" href="site.webmanifest"> 
     <link rel="icon" href="./assets/img/vlogo.png"> 
     <!-- <link rel="stylesheet" href="https://rsms.me/inter/inter.css"> -->
     <!-- <script src="https://cdn.tailwindcss.com/"></script> -->
