--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
       <!-- <meta name="image" content="http://cdn.mythbot.org/img/iZvnH.png"/> -->
       <meta property="og:title" content="Voltic Development | Projects" />
       <meta property="og:description" content="A place you can call home. Need help with what you are working on? Come join us and ask the community, We all have the same goal & that is"/>
-      <meta property="og:image" content="http://cdn.mythbot.org/img/iZvnH.png"/>
+      <!-- <meta property="og:image" content="http://cdn.mythbot.org/img/iZvnH.png"/> -->
       <meta property="og:url" content="https://voltic.thedev.id"/>
       <meta property="og:type" content="website" />
       <meta name="twitter:card" content="summary_large_image"/>
