added a new resources dsc profile banner template

--- a/tools.html
+++ b/tools.html
@@ -158,6 +158,7 @@
             <img src="./assets/img/tools/awesome_fonts.png" class="w-100" alt="...">
           </div>
         </div><br>
+        <!--! Bootstrap v5.1.3 -->
         <div class="card1 row g-0 position-relative" >
           <div class="col-md-6 mb-md-0 p-md-4">
             <img src="./assets/img/tools/bootstrap.png" class="w-100" alt="...">
@@ -168,6 +169,22 @@
               <br><code>Bootstrap v5.1.3 is used by Millions's of developers</code></p>
             Join our <a class="discord_id" draggable="false" href="https://mythbot.org/discord" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" ><i class="bi bi-discord" style="color: #7289DA;"></i>Discord</a><br><br>
             <a href="https://getbootstrap.com" class="btn btn-outline-dark" style="text-decoration: none;font-size: 1.3vh;width: 5rem;"><i style="color: #8e9629;" class="fas fa-house-user"></i>&nbsp;Home</a>
+          </div>
+        </div><br>
+        <!--! Dsc Profile Banner Layouts -->
+        <div class="card1 row g-0 position-relative" >
+          <div class="col-md-6 p-4 ps-md-3 text-light mt-2">
+            <h5 class="mt-5">Dsc Profile Banner Layouts</h5>
+            <p>Discord is slowly adding more and more customizable features. The newest being the banner users can add to their profile.
+              This new profile feature is visible when a user is clicked on in a Discord server.
+              The only details given are the image's minimum size: 600x240.
+              This page has a layout image you're free to use to get more out of your profile on Discord!
+              <br><code>This website is not affiliated with Discord</code></p>
+            Join our <a class="discord_id" draggable="false" href="https://mythbot.org/discord" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" ><i class="bi bi-discord" style="color: #7289DA;"></i>Discord</a><br><br>
+            <a href="https://tcno.co/Projects/DiscordBanner/" class="btn btn-outline-dark" style="text-decoration: none;font-size: 1.3vh;width: 5rem;"><i style="color: #8e9629;" class="fas fa-house-user"></i>&nbsp;Home</a>
+          </div>
+          <div class="col-md-6 mb-md-0 p-md-4">
+            <img src="./assets/img/tools/dscProfileBanner Layouts.png" class="w-100" alt="...">
           </div>
         </div><br>
 </div>
