changes button text from `Home` to `Visit`

--- a/tools.html
+++ b/tools.html
@@ -97,7 +97,7 @@
             <p>If you get an error message saying "Bot requires a code grant", head over to your application's settings and disable the "Require OAuth2 Code Grant" option. You shouldn't enable this option unless you know why you need to. 
               <br><code>This website is not affiliated with Discord</code></p>
             Join our <a class="discord_id" draggable="false" href="https://mythbot.org/discord" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" ><i class="bi bi-discord" style="color: #7289DA;"></i>Discord</a><br><br>
-            <a href="https://discordapi.com/permissions.html" class="btn btn-outline-dark " style="text-decoration: none;font-size: 1.3vh;width: 5rem;"><i style="color: #8e9629;" class="fas fa-house-user"></i>&nbsp;Home</a>
+            <a href="https://discordapi.com/permissions.html" class="btn btn-outline-dark " style="text-decoration: none;font-size: 1.3vh;width: 5rem;"><i style="color: #8e9629;" class="fas fa-house-user"></i>&nbsp;Visit</a>
           </div>
         </div><br>
         <!--! Zap Hosting -->
@@ -108,7 +108,7 @@
               Use code: <code>eqsource-10</code> for 20% off
               <br><code>Zap-Hosting is trusted by 100,000's of customers</code></p>
             Join our <a class="discord_id" draggable="false" href="https://mythbot.org/discord" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" ><i class="bi bi-discord" style="color: #7289DA;"></i>Discord</a><br><br>
-            <a href="https://zap-hosting.com/vdevs" class="btn btn-outline-dark" style="text-decoration: none;font-size: 1.3vh;width: 5rem;"><i style="color: #8e9629;" class="fas fa-house-user"></i>&nbsp;Home</a>
+            <a href="https://zap-hosting.com/vdevs" class="btn btn-outline-dark" style="text-decoration: none;font-size: 1.3vh;width: 5rem;"><i style="color: #8e9629;" class="fas fa-house-user"></i>&nbsp;Visit</a>
           </div>
           <div class="col-md-6 mb-md-0 p-md-4">
             <img src="./assets/img/tools/zap_big.png" class="w-100" alt="...">
@@ -123,7 +123,7 @@
             <p>Visual Studio Code is a code editor redefined and optimized for building and debugging modern web and cloud applications 
               <br><code>Visual Studio Code is recommended by millions of developers</code></p>
             Join our <a class="discord_id" draggable="false" href="https://mythbot.org/discord" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" ><i class="bi bi-discord" style="color: #7289DA;"></i>Discord</a><br><br>
-            <a href="https://code.visualstudio.com" class="btn btn-outline-dark " style="text-decoration: none;font-size: 1.3vh;width: 5rem;"><i style="color: #8e9629;" class="fas fa-house-user"></i>&nbsp;Home</a>
+            <a href="https://code.visualstudio.com" class="btn btn-outline-dark " style="text-decoration: none;font-size: 1.3vh;width: 5rem;"><i style="color: #8e9629;" class="fas fa-house-user"></i>&nbsp;Visit</a>
           </div>
         </div><br>
           
@@ -142,7 +142,7 @@
           <p>Discord Logo Workmark White · Discord Logo Workmark Black · Discord Logo Workmark Color. 
             <br><code>This website is affiliated with Discord</code></p>
           Join our <a class="discord_id" draggable="false" href="https://mythbot.org/discord" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" ><i class="bi bi-discord" style="color: #7289DA;"></i>Discord</a><br><br>
-          <a href="https://discord.com/branding" class="btn btn-outline-dark" style="text-decoration: none;font-size: 1.3vh;width: 5rem;"><i style="color: #8e9629;" class="fas fa-house-user"></i>&nbsp;Home</a>
+          <a href="https://discord.com/branding" class="btn btn-outline-dark" style="text-decoration: none;font-size: 1.3vh;width: 5rem;"><i style="color: #8e9629;" class="fas fa-house-user"></i>&nbsp;Visit</a>
         </div>
       </div><br>
      <!--! Font Awesome -->
@@ -152,7 +152,7 @@
             <p>Font Awesome Free is free, open source, and GPL friendly. You can use it for commercial projects, open source projects, or really almost whatever you want. 
               <br><code>Font Awesome is trusted by Millions's of users</code></p>
             Join our <a class="discord_id" draggable="false" href="https://mythbot.org/discord" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" ><i class="bi bi-discord" style="color: #7289DA;"></i>Discord</a><br><br>
-            <a href="https://fontawesome.com" class="btn btn-outline-dark" style="text-decoration: none;font-size: 1.3vh;width: 5rem;"><i style="color: #8e9629;" class="fas fa-house-user"></i>&nbsp;Home</a>
+            <a href="https://fontawesome.com" class="btn btn-outline-dark" style="text-decoration: none;font-size: 1.3vh;width: 5rem;"><i style="color: #8e9629;" class="fas fa-house-user"></i>&nbsp;Visit</a>
           </div>
           <div class="col-md-6 mb-md-0 p-md-4">
             <img src="./assets/img/tools/awesome_fonts.png" class="w-100" alt="...">
@@ -168,7 +168,7 @@
             <p>Designed and built with all the love in the world by the Bootstrap team with the help of our contributors.
               <br><code>Bootstrap v5.1.3 is used by Millions's of developers</code></p>
             Join our <a class="discord_id" draggable="false" href="https://mythbot.org/discord" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" ><i class="bi bi-discord" style="color: #7289DA;"></i>Discord</a><br><br>
-            <a href="https://getbootstrap.com" class="btn btn-outline-dark" style="text-decoration: none;font-size: 1.3vh;width: 5rem;"><i style="color: #8e9629;" class="fas fa-house-user"></i>&nbsp;Home</a>
+            <a href="https://getbootstrap.com" class="btn btn-outline-dark" style="text-decoration: none;font-size: 1.3vh;width: 5rem;"><i style="color: #8e9629;" class="fas fa-house-user"></i>&nbsp;Visit</a>
           </div>
         </div><br>
         <!--! Dsc Profile Banner Layouts -->
@@ -181,7 +181,7 @@
               This page has a layout image you're free to use to get more out of your profile on Discord!
               <br><code>This website is not affiliated with Discord</code></p>
             Join our <a class="discord_id" draggable="false" href="https://mythbot.org/discord" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" ><i class="bi bi-discord" style="color: #7289DA;"></i>Discord</a><br><br>
-            <a href="https://tcno.co/Projects/DiscordBanner/" class="btn btn-outline-dark" style="text-decoration: none;font-size: 1.3vh;width: 5rem;"><i style="color: #8e9629;" class="fas fa-house-user"></i>&nbsp;Home</a>
+            <a href="https://tcno.co/Projects/DiscordBanner/" class="btn btn-outline-dark" style="text-decoration: none;font-size: 1.3vh;width: 5rem;"><i style="color: #8e9629;" class="fas fa-house-user"></i>&nbsp;Visit</a>
           </div>
           <div class="col-md-6 mb-md-0 p-md-4">
             <img src="./assets/img/tools/dscProfileBanner Layouts.png" class="w-100" alt="...">
