--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
       <!-- <link rel="stylesheet" href="https://rsms.me/inter/inter.css"> -->
       <!-- <script src="https://cdn.tailwindcss.com/"></script> -->
       <link rel="stylesheet" href="../assets/css/style.css" />
-      <script src="../assets/js/index.js" type="text/javascript"></script> 
+      <script src="./assets/js/index.js" type="text/javascript"></script> 
   </head>
 
 <body>
@@ -192,7 +192,7 @@
   </div>
   
     <!-- Content -->
-    <script src="../assets/js/index.js" type="text/javascript"></script> 
+    <script src="./assets/js/index.js" type="text/javascript"></script> 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
     
