--- a/tools.html
+++ b/tools.html
@@ -28,7 +28,7 @@
       <!-- <link rel="stylesheet" href="https://rsms.me/inter/inter.css"> -->
       <!-- <script src="https://cdn.tailwindcss.com/"></script> -->
       <link rel="stylesheet" href="../assets/css/style.css" />
-      <script src="../assets/js/index.js" type="text/javascript"></script> 
+      <script src="./assets/js/index.js" type="text/javascript"></script> 
   </head>
 
 <body>
