added new page (`planet rust`) Updated navbar, added assets

--- a/index.html
+++ b/index.html
@@ -50,13 +50,14 @@
       <a class="navbar-brand" href="/">
         <img src="./assets/img/vlogot.png" alt="" width="50" height="50" class="d-inline-block align-text-left" style="border-radius: 50rem;">
       </a>
-      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 mb-md-0">
+      <ul class="nav col-5 col-lg-auto me-lg-auto mb-2 mb-md-0">
         <li><a href="/" class="nav-link px-2 secondary" ><i style="color: #8e9629;"  class="fas fa-house-user"></i>&nbsp;Home</a></li>
         <li><a href="https://github.com/Voltic-Development" class="nav-link px-2 secondary" target="_blank"><i style="color: #fafafa;"  class="bi bi-github"></i>&nbsp;Github</a></li>
         <li><a href="./projects.html" class="nav-link px-2 secondary"><i class="fas fa-project-diagram" style="color: #6b3434;"></i>&nbsp;Projects</a></li>
         <li><a href="https://discord.gg/Q6ZSW63Fpw" class="nav-link px-2 secondary" target="_blank"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;Discord</a></li>
         <li><a href="./tools.html" class="nav-link px-2 secondary" ><i style="color: #7289DA;"  class="bi bi-tools"></i>&nbsp;Tools</a></li>
         <li><a href="./store.html" class="nav-link px-2 secondary"><i class="fas fa-store" style="color: #1c7723;"></i>&nbsp;Store</a></li>
+        <li><a href="./prust.html" class="nav-link px-2 secondary"><i class="fas fa-globe" style="color: #ce422b;"></i>&nbsp;Planet Rust</a></li>
       </ul>
     </div>
     </div>
@@ -64,8 +65,11 @@
     <center><img class="logoImg" src="./assets/img/vlogot.png" draggable="false" alt="vdlogo" style="text-align: center;"></center>
             <h2 style="text-decoration: none; color: #7289DA; font-size: 2rem;  color: #97A9B4;text-align: center;">Voltic Development</h2><br>
         <p class="headerTitle" style="font-size: 1rem;"> 
-            Welcome to our new website. We hope you find what you are looking for, In the mean time <br>Join our <a class="discord_id" draggable="false" href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" ><i class="bi bi-discord" style="color: #7289DA;"></i>Discord</a>
-        </p>
+            Welcome to our new website. We hope you find what you are looking for, In the mean time <br>Join our <a class="discord_id" draggable="false" href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" ><i class="bi bi-discord" style="color: #7289DA;"></i>Discord</a><br><br><br>
+            <a href="https://www.mythbot.org/discord" class="btn6 btn-outline-dark" target="_blank" style="padding: 5px 25px 5px 25px;"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;Discord</a>
+            <a href="./store.html" class="btn6 btn-outline-dark" target="_blank" style="padding: 5px 25px 5px 25px;"><i class="fas fa-store" style="color: #1c7723;"></i>&nbsp;Store</a><br>
+        </p><br>
+        
     <br>
       <!-- Recruiting Box -->
         <div class="flip-card">
